--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,53 @@
-// font-family: 'Montserrat', sans-serif;
-// font-family: 'Raleway', sans-serif;
-html{
-  box-sizing: border-box;
+@import 'vars';
+@import 'global';
+@import 'fonts';
+
+/*=====Header=====*/
+
+.header__top-inner{
+  display: flex;
+  justify-content: space-between;
+  height: 90px;
+  align-items: center;
+}
+.header__text{
+  margin-left: auto;
+  margin-right: 50px;
+  span{
+    color: $red;
+  }
+}
+.header__btn{
+  width: 72px;
+  padding: 4px;
+  margin-left: 25px;
+  font-size: 12px;
+  text-align: center;
+  color: $white;
+  border-radius: 4px;
+  &-login{
+    background-color: $green;
+  }
+  &-register{
+    background-color: $red;
+    margin-left: 7px;
+  }
+}
+.header__menu{
+  background-color: $bg;
+}
+.menu__list{
+  display: flex;
+  height: 60px;
+  align-items: center;
+}
+.menu__item{
+  display: inline-block;
+  & + li{
+    margin-left: 30px;
+  }
+}
+.menu__link{
+  font-weight: 500;
+  color: $white;
 }
